--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 gdown==4.7.1
 numpy==1.23.5
-opencv_python==4.9.0.80
+#opencv_python==4.9.0.80
 streamlit==1.25.0
 tensorflow==2.12.0
 # tensorflow_hub==0.14.0
-scipy
+opencv-python-headless
+pandas
