--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ numpy==1.23.5
 #opencv_python==4.9.0.80
 streamlit==1.25.0
 tensorflow==2.12.0
-# tensorflow_hub==0.14.0
+tensorflow_hub==0.14.0
 opencv-python-headless
 pandas
